@startuml State Diagram - Stany zlecenia

!theme plain
skinparam state {
    BackgroundColor<<initial>> LightGray
    BackgroundColor<<progress>> LightBlue
    BackgroundColor<<final>> LightGreen
    BackgroundColor<<cancelled>> LightCoral
    BackgroundColor<<partial>> LightYellow
}

title Diagram Stanow - Cykl zycia zlecenia (Order)

[*] --> CREATED : Menadzer tworzy zlecenie

state CREATED <<initial>> {
    CREATED : Zlecenie utworzone
    CREATED : Oczekuje na przypisanie
    CREATED : lub podjecie
}

CREATED --> ASSIGNED : Menadzer przypisuje\ndo magazyniera
CREATED --> IN_PROGRESS : Magazynier podejmuje\nzlecenie z puli
CREATED --> CANCELLED : Menadzer anuluje

state ASSIGNED <<initial>> {
    ASSIGNED : Zlecenie przypisane
    ASSIGNED : do magazyniera
    ASSIGNED : Oczekuje na rozpoczecie
}

ASSIGNED --> IN_PROGRESS : Magazynier rozpoczyna\nrealizacje
ASSIGNED --> CREATED : Menadzer usuwa\nprzypisanie
ASSIGNED --> CANCELLED : Menadzer anuluje

state IN_PROGRESS <<progress>> {
    IN_PROGRESS : Zlecenie w trakcie
    IN_PROGRESS : realizacji
    IN_PROGRESS : --
    IN_PROGRESS : Magazynier kompletuje
    IN_PROGRESS : pozycje zlecenia
}

IN_PROGRESS --> COMPLETED : Wszystkie pozycje\nzrealizowane
IN_PROGRESS --> PARTIALLY_COMPLETED : Brak mozliwosci\nrealizacji wszystkich pozycji
IN_PROGRESS --> CANCELLED : Anulowanie\n(wymaga uzasadnienia)

state PARTIALLY_COMPLETED <<partial>> {
    PARTIALLY_COMPLETED : Zlecenie czesciowo
    PARTIALLY_COMPLETED : zrealizowane
    PARTIALLY_COMPLETED : --
    PARTIALLY_COMPLETED : Niektore pozycje
    PARTIALLY_COMPLETED : nie zostaly skompletowane
}

PARTIALLY_COMPLETED --> IN_PROGRESS : Wznowienie realizacji\n(np. po uzupelnieniu stanow)
PARTIALLY_COMPLETED --> COMPLETED : Zatwierdzenie\nczesciowej realizacji
PARTIALLY_COMPLETED --> CANCELLED : Anulowanie

state COMPLETED <<final>> {
    COMPLETED : Zlecenie zrealizowane
    COMPLETED : --
    COMPLETED : Data zakonczenia zapisana
    COMPLETED : Historia ruchow zaktualizowana
}

COMPLETED --> [*]

state CANCELLED <<cancelled>> {
    CANCELLED : Zlecenie anulowane
    CANCELLED : --
    CANCELLED : Powod anulowania zapisany
    CANCELLED : Rezerwacje zwolnione
}

CANCELLED --> [*]

note right of CREATED
  **Dostepne akcje:**
  - Edycja pozycji
  - Zmiana priorytetu
  - Przypisanie magazyniera
  - Anulowanie
end note

note right of IN_PROGRESS
  **Dostepne akcje:**
  - Skanowanie QR
  - Potwierdzanie pozycji
  - Raportowanie problemow
  - Wstrzymanie (pause)
end note

note bottom of PARTIALLY_COMPLETED
  **Przyczyny:**
  - Brak towaru na stanie
  - Uszkodzony produkt
  - Blad w danych
  - Niedostepna lokalizacja
end note

@enduml
